Signed-off-by: goodnewday <1028199089@qq.com>

--- a/Util/Util/html/os_8h.html
+++ b/Util/Util/html/os_8h.html
@@ -116,7 +116,7 @@ Functions</h2></td></tr>
 <dl class="section date"><dt>Date</dt><dd>2017/1/2</dd></dl>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">sleep_time</td><td>The sleep time.</td></tr>
+    <tr><td class="paramname">sleep_time</td><td>The sleep time(second).</td></tr>
   </table>
   </dd>
 </dl>
@@ -144,7 +144,7 @@ Functions</h2></td></tr>
 <dl class="section date"><dt>Date</dt><dd>2017/1/2</dd></dl>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">usleep_time</td><td>The usleep time.</td></tr>
+    <tr><td class="paramname">usleep_time</td><td>The usleep time(micro second).</td></tr>
   </table>
   </dd>
 </dl>
